--- a/laudry app/Base.lproj/LaunchScreen.storyboard
+++ b/laudry app/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" launchScreen="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -9,17 +9,19 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Zzw-oX-cnQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="Zzp-Bl-jXT"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="PP3-aJ-dEc">
-                                <rect key="frame" x="0.0" y="79" width="320" height="443"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PP3-aJ-dEc">
+                                <rect key="frame" x="0.0" y="80" width="320" height="440"/>
                                 <subviews>
-                                    <tabBar contentMode="scaleToFill" id="h5F-l9-wEE">
+                                    <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h5F-l9-wEE">
                                         <rect key="frame" x="0.0" y="441" width="320" height="49"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <items/>
                                         <color key="tintColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -31,6 +33,12 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.78876119850000004" green="0.94803267719999995" blue="0.93040329219999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="PP3-aJ-dEc" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Ca2-oo-Ptw"/>
+                            <constraint firstItem="Zzp-Bl-jXT" firstAttribute="top" secondItem="PP3-aJ-dEc" secondAttribute="bottom" constant="48" id="R0n-jh-2pE"/>
+                            <constraint firstItem="PP3-aJ-dEc" firstAttribute="top" secondItem="Zzw-oX-cnQ" secondAttribute="bottom" constant="60" id="SOF-0D-8hq"/>
+                            <constraint firstAttribute="trailing" secondItem="PP3-aJ-dEc" secondAttribute="trailing" id="eTA-Sb-W6M"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
